@@ -770,6 +770,11 @@ name|isClosed
 operator|=
 literal|true
 expr_stmt|;
+name|syncStrategy
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 block|}
 annotation|@
 name|Override
