@@ -48,6 +48,42 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|SynchronousQueue
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|ThreadPoolExecutor
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|TimeUnit
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -240,6 +276,22 @@ name|common
 operator|.
 name|util
 operator|.
+name|ExecutorUtil
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|util
+operator|.
 name|NamedList
 import|;
 end_import
@@ -340,6 +392,20 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|util
+operator|.
+name|DefaultSolrThreadFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|slf4j
 operator|.
 name|Logger
@@ -394,6 +460,46 @@ specifier|private
 specifier|final
 name|ShardHandler
 name|shardHandler
+decl_stmt|;
+DECL|field|recoveryCmdExecutor
+specifier|private
+name|ThreadPoolExecutor
+name|recoveryCmdExecutor
+init|=
+operator|new
+name|ThreadPoolExecutor
+argument_list|(
+literal|0
+argument_list|,
+name|Integer
+operator|.
+name|MAX_VALUE
+argument_list|,
+literal|5
+argument_list|,
+name|TimeUnit
+operator|.
+name|SECONDS
+argument_list|,
+operator|new
+name|SynchronousQueue
+argument_list|<
+name|Runnable
+argument_list|>
+argument_list|()
+argument_list|,
+operator|new
+name|DefaultSolrThreadFactory
+argument_list|(
+literal|"recoveryCmdExecutor"
+argument_list|)
+argument_list|)
+decl_stmt|;
+DECL|field|isClosed
+specifier|private
+specifier|volatile
+name|boolean
+name|isClosed
 decl_stmt|;
 DECL|field|client
 specifier|private
@@ -640,6 +746,22 @@ operator|.
 name|getShardId
 argument_list|()
 decl_stmt|;
+if|if
+condition|(
+name|isClosed
+condition|)
+block|{
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"We have been closed, won't sync with replicas"
+argument_list|)
+expr_stmt|;
+return|return
+literal|false
+return|;
+block|}
 comment|// if no one that is up is active, we are willing to wait...
 comment|// we don't want a recovering node to become leader and then
 comment|// a better candidate pops up a second later.
@@ -693,6 +815,22 @@ expr_stmt|;
 block|}
 try|try
 block|{
+if|if
+condition|(
+name|isClosed
+condition|)
+block|{
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"We have been closed, won't attempt to sync replicas back to leader"
+argument_list|)
+expr_stmt|;
+return|return
+literal|false
+return|;
+block|}
 if|if
 condition|(
 name|success
@@ -1132,6 +1270,21 @@ operator|+
 literal|") to recover."
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|isClosed
+condition|)
+block|{
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"We have been closed, don't request that a replica recover"
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
 name|requestRecovery
 argument_list|(
 name|leaderProps
@@ -1161,6 +1314,7 @@ operator|.
 name|coreName
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 catch|catch
 parameter_list|(
@@ -1430,6 +1584,26 @@ name|params
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|close
+specifier|public
+name|void
+name|close
+parameter_list|()
+block|{
+name|this
+operator|.
+name|isClosed
+operator|=
+literal|true
+expr_stmt|;
+name|ExecutorUtil
+operator|.
+name|shutdownNowAndAwaitTermination
+argument_list|(
+name|recoveryCmdExecutor
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|requestRecovery
 specifier|private
 name|void
@@ -1558,10 +1732,12 @@ block|}
 block|}
 block|}
 decl_stmt|;
-name|thread
+name|recoveryCmdExecutor
 operator|.
-name|run
-argument_list|()
+name|execute
+argument_list|(
+name|thread
+argument_list|)
 expr_stmt|;
 block|}
 DECL|method|params
