@@ -4458,6 +4458,11 @@ name|core
 init|=
 literal|null
 decl_stmt|;
+name|SyncStrategy
+name|syncStrategy
+init|=
+literal|null
+decl_stmt|;
 try|try
 block|{
 name|core
@@ -4476,13 +4481,12 @@ operator|!=
 literal|null
 condition|)
 block|{
-name|SyncStrategy
 name|syncStrategy
-init|=
+operator|=
 operator|new
 name|SyncStrategy
 argument_list|()
-decl_stmt|;
+expr_stmt|;
 name|Map
 argument_list|<
 name|String
@@ -4617,6 +4621,19 @@ literal|null
 condition|)
 block|{
 name|core
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|syncStrategy
+operator|!=
+literal|null
+condition|)
+block|{
+name|syncStrategy
 operator|.
 name|close
 argument_list|()
